--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="bg-color">
+<body>
+    <div class="container">
     <form class="hello">
-        <h2 class="heading">CONTACT US</h2>
+        <h2>CONTACT US</h2>
         <br />
-        <div class="form">
-            <input class="name" type="text" placeholder="Name">
+            <input name="name" class="name type" type="text" placeholder="Name">
             <br /><br />
-            <input class="subject" type="text" placeholder="Subject">
+            <input name="subject" class="subject type" type="text" placeholder="Subject">
             <br /><br />
-            <input class="number" type="number" placeholder="Number">
+            <input name="number" class="number type" type="number" placeholder="Number">
             <br /><br />
-            <input class="email" type="email" placeholder="Email">
+            <input name="email" class="email type" type="email" placeholder="Email">
             <br /><br />
-            <input class="message" type="text" name="message" placeholder="Message .....">
+            <textarea class="message" placeholder="Message ....."></textarea>
             <br /><br />
             <button class="Submit" type="button">Submit</button>
         </div>
