--- a/index.html
+++ b/index.html
@@ -9,24 +9,39 @@
 </head>
 
 <body>
-    <div class="container">
-    <form class="hello">
+    <div class="container" id="container">
+    <form action="/myaction.php" name="myForm" onsubmit="return validateForm()" method="post">
         <h2>CONTACT US</h2>
         <br />
-            <input name="name" class="name type" type="text" placeholder="Name">
-            <br /><br />
-            <input name="subject" class="subject type" type="text" placeholder="Subject">
-            <br /><br />
-            <input name="number" class="number type" type="number" placeholder="Number">
-            <br /><br />
-            <input name="email" class="email type" type="email" placeholder="Email">
-            <br /><br />
-            <textarea class="message" placeholder="Message ....."></textarea>
-            <br /><br />
-            <button class="Submit" type="button">Submit</button>
+        <div id="name">
+            <input class="type" type="text" name="fname" required placeholder="Name"><br>
+            <span class="formerror"></span>  
         </div>
-
-  </form>
+        <br><br>
+        <div id="number">
+            <input class="type" type="number" name="fnumber" required placeholder="Number"><br>
+            <span class="formerror"></span>  
+        </div>
+        <br><br>
+        <div id="email">
+            <input class="type" type="email" name="femail" required placeholder="Email"><br>
+            <span class="formerror"></span>  
+        </div>
+        <br><br>
+        <div id="pass">
+            <input class="type" type="password" name="fpass" required placeholder="Password"><br>
+            <span class="formerror"></span>  
+        </div>
+        <br><br>
+        <div id="pass2">
+            <input class="type" type="password" name="fpass2" required placeholder="Confirm your Password"><br>
+            <span class="formerror"></span>  
+        </div>
+        <br><br>
+        <input class="Submit" type="submit" value="submit">
+        </form>
+    </div>
+   <script src="index.js"></script>
 </body>
 
 </html>
